@@ -40,9 +40,9 @@
 #include <vpr/Util/Debug.h>
 
 // Jackal categories
-const vpr::DebugCategory jcclDBG_SERVER("1ca1e39f-d798-47f5-acd6-105c4d490476", "DBG_JACKAL_SERVER", "JCCL-SRV:");
-const vpr::DebugCategory jcclDBG_PERFORMANCE("02acc29d-6f09-4498-bf38-23b02cd39084", "DBG_JACKAL_PERFORMANCE", "JCCL_PERF:");
-const vpr::DebugCategory jcclDBG_CONFIG("a0b2de1f-ce63-489b-8248-f03ef56d36f7", "DBG_CONFIGDB", "JCCL-CFG:");
-const vpr::DebugCategory jcclDBG_RECONFIGURATION("94a6e028-b810-40e5-b6fd-e41b1a74db0e", "DBG_RECONFIGURATION", "JCCL-RCFG:");
+const vpr::DebugCategory jcclDBG_SERVER(vpr::GUID("1ca1e39f-d798-47f5-acd6-105c4d490476"), "DBG_JACKAL_SERVER", "JCCL-SRV:");
+const vpr::DebugCategory jcclDBG_PERFORMANCE(vpr::GUID("02acc29d-6f09-4498-bf38-23b02cd39084"), "DBG_JACKAL_PERFORMANCE", "JCCL_PERF:");
+const vpr::DebugCategory jcclDBG_CONFIG(vpr::GUID("a0b2de1f-ce63-489b-8248-f03ef56d36f7"), "DBG_CONFIGDB", "JCCL-CFG:");
+const vpr::DebugCategory jcclDBG_RECONFIGURATION(vpr::GUID("94a6e028-b810-40e5-b6fd-e41b1a74db0e"), "DBG_RECONFIGURATION", "JCCL-RCFG:");
 
 #endif
